# LCL-evaluation

./: .gitignore  install.sh  run_evaluation.sh  run_jupyter_notebooks.sh  run_localize.sh
implementations/kedro/: .telemetry  environment.yaml  pyproject.toml
implementations/kedro/conf/00-Initial/: globals.yml  parameters.yml
implementations/kedro/conf/01-Changed_and_added_model/: catalog.yml  globals.yml  parameters.yml
implementations/kedro/conf/02-Changed_dataset_to_logatec/: globals.yml  parameters.yml
implementations/kedro/conf/03-Added_split_and_metric/: globals.yml  parameters.yml
implementations/kedro/conf/04-Added_automl_model/: catalog.yml  globals.yml  parameters.yml
implementations/kedro/conf/Benchmarking/: globals.yml  parameters.yml
implementations/kedro/conf/base/: catalog.yml
implementations/kedro/src/: benchmarking
implementations/kedro/src/lcl_evaluation_kedro/: __main__.py  hooks.py  pipeline_registry.py  settings.py
implementations/kedro/src/lcl_evaluation_kedro/pipelines/experiments/automl/: nodes.py
implementations/kedro/src/lcl_evaluation_kedro/pipelines/experiments/changed_dataset/: nodes.py
implementations/kedro/src/lcl_evaluation_kedro/pipelines/experiments/changed_model/: nodes.py
implementations/kedro/src/lcl_evaluation_kedro/pipelines/experiments/split_metric/: nodes.py
implementations/kedro/src/lcl_evaluation_kedro/pipelines/experiments/v00_initial/: nodes.py  pipeline.py
implementations/kedro/src/lcl_evaluation_kedro/pipelines/experiments/v02_changed_dataset_to_logatec/: nodes.py
src/: CountLOC.py  plot.ipynb  (+5 more)
(+38 files in other folders)
